static/css/base.css
html{
    height:100%
}

.text-black{
    color: black;
}

.font-weight-bold{
    font-weight: 600;
}
/* Navbar */

#logo{
    width:90px;
    height:90px;
}

.nav > li{
    margin-left:10px;
    margin-right:10px;
}


.top-nav-bg{
    background-color: #FFD100; 
} 
/* Hero Image  */

.hero-image-outer{
    height: 1164px;
    width: 100%;
    z-index:-9999999;
 } 
 .hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/media/FnGHeroImage.jpg");
    height: 100%;
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
  }

.home-text {
    position: relative;
    top: 100px;
    font-size: 28px;
    color:fuchsia;
    height: 100px;
    width: 100px;
    text-transform: capitalize;
    border-width: medium;
    border:4px black 4px;
    font-family:Georgia, 'Times New Roman', Times, serif;
    background-color: rgba(0, 0, 0, 0.5);
    height: fit-content;
    width: fit-content;
}

.home-btn {
    z-index:9999999;
    position: absolute;
    display: block;
    left: 0;
}

.home-btn:hover, .home-btn:focus {
    color:red
}


/* Products Pages  */
.product-box {
    width: 100%;
    height: 700px;
    overflow: hidden;
}

.image-container {
    padding: 10px 10px 0px 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    height: 400px;
}

.my-card-body{
    height: 90px !important;
    text-align: left;
    font-size: 16px;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    display: flex;
    text-overflow:ellipsis !important;
}

.my-card-footer{
    height:120px;
}

.product-price-footer{
    align-items: center;
    justify-content: start;
    display: flex;
    font-weight: 600;
    font-size: 24px;
}

.header-container {
    padding-top: 140px;
}

.product-link:hover, .product-link:focus, .product-link:target {
    text-decoration: underline;
}

/* Product Details Page */

.mypb{
    padding-bottom: 3rem;
}

/* Cart */
.update-qty:hover, .remove-qty:hover{
    cursor: pointer;
}

/***************** Toasts *******************/
.toasts-container {
    position: fixed;
    top: 82px;
    right: 10px;
    z-index: 99999999999;
}

.my-toast {
    overflow: visible;
}


/***************** Media Queries *******************/


@media (max-width: 577px) {
    #logo{
        width:45px;
        height:45px;
    }
    .image-container{
        height: 280px;
    }
    .prod-image-container-sm{
        height: 280px;
    }
    .hero-image-outer{
        height: 750px;
        width: 100%;
        z-index:-9999999;
     } 
     .home-text {
        position: relative;
        top: 40px;
        right:20px;
        font-size: 28px;
        color:fuchsia;
        height: 100px;
        width: 100px;
        text-transform: capitalize;
        border-width: medium;
        border:4px black 4px;
        font-family:Georgia, 'Times New Roman', Times, serif;
        background-color: rgba(0, 0, 0, 0.5);
        height: fit-content;
        width: fit-content;
    }
}

@media (min-width:768px) {
    .mypb{
        padding-bottom: 0.5rem !important;
    }
}

